# network-chatbot

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app_to_deploy.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  start.sh
llm/: chat.py  model.py
llm/agents/: agent_router.py  base_chat_agent.py  chat_agent.py  gemini_chat_agent.py  local_chat_agent.py  rag_agent.py  rag_chat_agent.py
llm/data/: common_home_network_problems.txt  data_pipeline.py  faiss_index_common_home_network_problems.pkl  faiss_index_network_troubleshooting.pkl  metadata_common_home_network_problems.pkl  metadata_network_troubleshooting.pkl
llm/data/files/: network_troubleshooting.txt
llm/utils/: agent_mapping.py  prompts.py  select_agent.py  tools.py
llm/utils/tools/: bytefix_funcs.py  hypernet_funcs.py  hypernet_tools.py  professor_ping_funcs.py  tools.py
llm/utils/tools/helpers/: select_tools.py
test/test_agents/: test_bytefix.py  test_fixie.py  test_hypernet.py  test_prof_ping.py  test_routerx.py  test_sentinel.py
test/test_chat/: aiModel_test.py
utils/: database.py  log.py
