[project]
name = "network-chatbot-agent"
version = "0.1.0"
description = "A chatbot agent for network troubleshooting."
authors = [{ name = "Eda Yılmaz", email = "edayilmxz@outlook.com" }]
requires-python = ">=3.10"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "faiss-cpu==1.10.0",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "ollama==0.4.8",
    "packaging==25.0",
    "pillow==11.2.1",
    "pluggy==1.5.0",
    "pydantic==2.11.3",
    "pydantic_core==2.33.1",
    "pytest==8.3.5",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "setuptools==79.0.1",
    "sniffio==1.3.1",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "speedtest-cli==2.1.3"
]
